tests/ui/ast_interval.stderr
error[E0382]: use of moved value: `term1`
  --> tests/ui/ast_interval.rs:10:10
   |
7  |     let term1: ast::Term = ast::symbolic_term(&loc, &sym).unwrap().into();
   |         ----- move occurs because `term1` has type `Term<'_>`, which does not implement the `Copy` trait
8  |     let term2: ast::Term = ast::symbolic_term(&loc, &sym).unwrap().into();
9  |     let interval = ast::interval(&loc, term1, term2);
   |                                        ----- value moved here
10 |     drop(term1);
   |          ^^^^^ value used here after move
   |
help: consider cloning the value if the performance cost is acceptable
   |
9  |     let interval = ast::interval(&loc, term1.clone(), term2);
   |                                             ++++++++

error[E0382]: use of moved value: `term2`
  --> tests/ui/ast_interval.rs:11:10
   |
8  |     let term2: ast::Term = ast::symbolic_term(&loc, &sym).unwrap().into();
   |         ----- move occurs because `term2` has type `Term<'_>`, which does not implement the `Copy` trait
9  |     let interval = ast::interval(&loc, term1, term2);
   |                                               ----- value moved here
10 |     drop(term1);
11 |     drop(term2);
   |          ^^^^^ value used here after move
   |
help: consider cloning the value if the performance cost is acceptable
   |
9  |     let interval = ast::interval(&loc, term1, term2.clone());
   |                                                    ++++++++
