tests/ui/ast_interval.rs
// ast_interval
use clingo::*;

fn main() {
    let loc = ast::Location::default();
    let sym = Symbol::create_id("test", true).unwrap();
    let term1: ast::Term = ast::symbolic_term(&loc, &sym).unwrap().into();
    let term2: ast::Term = ast::symbolic_term(&loc, &sym).unwrap().into();
    let interval = ast::interval(&loc, term1, term2);
    drop(term1);
    drop(term2);
    let _end = interval;
}
